// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled basic render 1`] = `
.glamor-0ne2u6f {
  color: blue;
  font-size: 20;
}

@media (min-width:520px) {
  .glamor-0ne2u6f {
    color: green;
  }
}

@media (min-width:420px) {
  .glamor-0ne2u6f {
    color: blue;
  }
}

<h1
  class="glamor-0 glamor-0ne2u6f"
>
  hello world
</h1>
`;

exports[`styled className override with css- className 1`] = `
.glamor-1 {
  color: yellow;
  color: hotpink;
}

<h1
  class="glamor-0 glamor-1"
>
  hello world
</h1>
`;

exports[`styled composing components 1`] = `
.glamor-2 {
  color: green;
  display: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<button
  class="glamor-0 glamor-1 glamor-2"
>
  hello world
</button>
`;

exports[`styled composition 1`] = `
.glamor-2 {
  font-size: 20px;
  font-size: 13.333333333333334;
}

<h1
  class="glamor-0 glamor-1 legacy__class glamor-2"
>
  hello world
</h1>
`;

exports[`styled function in expression 1`] = `
.glamor-2 {
  font-size: 20px;
  font-size: 40px;
}

<h1
  class="glamor-0 glamor-1 legacy__class glamor-2"
>
  hello world
</h1>
`;

exports[`styled handles more than 10 dynamic properties 1`] = `
.glamor-1 {
  text-decoration: underline;
  border-right: solid blue 54px;
  background: white;
  color: black;
  display: block;
  border-radius: 3px;
  padding: 25px;
  width: 500px;
  z-index: 100;
  font-size: 18px;
  text-align: center;
  border-left: blue;
}

<h1
  class="glamor-0 legacy__class glamor-1"
>
  hello world
</h1>
`;

exports[`styled innerRef 1`] = `
.glamor-1 {
  font-size: 12px;
}

<Styled
  innerRef={[Function]}
>
  <h1
    className="glamor-0 glamor-1"
  >
    hello world
  </h1>
</Styled>
`;

exports[`styled input placeholder 1`] = `
.glamor-1::placeholder {
  background-color: green;
}

<input
  class="glamor-0 glamor-1"
/>
`;

exports[`styled nested 1`] = `
.glamor-3 div span {
  color: red;
}

.glamor-3 div {
  color: green;
}

.glamor-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.glamor-1 {
  font-size: 20px;
}

<div
  class="glamor-2 glamor-3"
>
  hello 
  <h1
    class="glamor-0 glamor-1"
  >
    This will be green
  </h1>
   world
</div>
`;

exports[`styled no dynamic 1`] = `
.glamor-1 {
  float: left;
}

<h1
  class="glamor-0 glamor-1"
>
  hello world
</h1>
`;

exports[`styled no prop filtering on non string tags 1`] = `
<a
  a="true"
  aria-label="some label"
  b="true"
  classname="css-j css-1fpqmhj"
  cool="true"
  data-wow="value"
  filtering="true"
  href="link"
  is="true"
  prop="true"
  wow="true"
>
  hello world
</a>
`;

exports[`styled prop filtering 1`] = `
<a
  aria-label="some label"
  classname="css-i css-1fpqmhj"
  data-wow="value"
  href="link"
  is="true"
>
  hello world
</a>
`;

exports[`styled prop filtering on composed styled components that are string tags 1`] = `
<a
  aria-label="some label"
  classname="css-k css-l css-1tp52ze"
  data-wow="value"
  href="link"
  is="true"
>
  hello world
</a>
`;

exports[`styled random expressions undefined return 1`] = `
.glamor-1 {
  color: green;
}

<h1
  class="glamor-0 legacy__class glamor-1"
>
  hello world
</h1>
`;

exports[`styled random object expression 1`] = `
.glamor-1 {
  background-color: hotpink;
  font-size: 1rem;
  margin-top: 0;
  margin-right: auto;
  margin-bottom: 0;
  margin-left: auto;
  color: green;
}

<h1
  class="glamor-0 legacy__class glamor-1"
>
  hello world
</h1>
`;

exports[`styled selectivity when composing 1`] = `
.glamor-2 {
  color: green;
  color: blue;
  color: red;
  color: purple;
  color: green;
}

<h1
  class="glamor-0 glamor-1 glamor-2"
>
  What color am I?
</h1>
`;
